Simplify Gemini
